--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,11 @@ modules.xml
 /web/js/
 
 # End of https://www.gitignore.io/api/symfony,intellij+all
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
