--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,15 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/rest-bundle": "^2.5",
+        "jms/serializer-bundle": "^3.3",
+        "sensio/framework-extra-bundle": "^5.3",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "4.3.*"
     },
     "config": {
@@ -55,5 +60,11 @@
             "allow-contrib": false,
             "require": "4.3.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "symfony/maker-bundle": "^1.11",
+        "symfony/phpunit-bridge": "^4.3",
+        "symfony/web-server-bundle": "4.3.*"
     }
 }
