--- a/.travis.yml
+++ b/.travis.yml
@@ -39,12 +39,12 @@ addons:
   ssh_known_hosts: ta70.mckay1717.eu
 
 before_deploy:
-- openssl aes-256-cbc -K $encrypted_d41575748ce2_key -iv $encrypted_d41575748ce2_iv -in deploy_rsa.enc -out ~\/deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_d41575748ce2_key -iv $encrypted_d41575748ce2_iv -in deploy_rsa.enc -out \/tmp\/deploy_rsa -d
 - eval "$(ssh-agent -s)"
-- chmod 600 ~\/deploy_rsa
-- ssh-add ~\/deploy_rsa
+- chmod 600 \/tmp\/deploy_rsa
+- ssh-add \/tmp\/deploy_rsa
 
 deploy:
   provider: script
   skip_cleanup: true
-  script: ssh -i deploy_rsa -t travis@ta70.mckay1717.eu 'touch start_build'
+  script: ssh -i \/tmp\/deploy_rsa -t travis@ta70.mckay1717.eu 'touch start_build'
