--- a/composer.json
+++ b/composer.json
@@ -63,8 +63,12 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "fzaninotto/faker": "^1.8",
+        "liip/functional-test-bundle": "^3.0.0",
+        "symfony/browser-kit": "4.3.*",
         "symfony/maker-bundle": "^1.11",
         "symfony/phpunit-bridge": "^4.3",
-        "symfony/web-server-bundle": "4.3.*"
+        "symfony/web-server-bundle": "4.3.*",
+        "ext-json": "*"
     }
 }
