--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,9 @@ modules.xml
 ###< symfony/web-server-bundle ###
 .env.local
 purge.sh
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
