--- a/.env
+++ b/.env
@@ -19,11 +19,11 @@ APP_SECRET=af935f3f209086a56e031f2abe95c856
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
-DB_USER=root
-DB_PASSWORD=difjdsifjs
-DB_HOST=ta70.mckay1717.eu
-DB_PORT=3306
-DB_NAME=app-test
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
 ###> doctrine/doctrine-bundle ###
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
