--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,11 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
-        "friendsofsymfony/rest-bundle": "^2.3",
+        "friendsofsymfony/rest-bundle": "*",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
+        "symfony/dotenv": "^4.0",
         "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
@@ -19,11 +20,11 @@
         "symfony/serializer": "^4.3",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/translation": "^4.0",
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-bundle": "*",
-        "symfony/yaml": "^4.0",
-        "symfony/dotenv": "^4.0"
+        "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "symfony/browser-kit": "^4.0",
