Change User function name

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,8 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            json_login:
+                check_path: /login
             anonymous: true
             guard:
                 authenticators:
@@ -27,7 +29,7 @@ security:
             # http_basic: true
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
-            # form_login: true
+             #form_login: false
             # https://symfony.com/doc/current/security/form_login_setup.html
 
     # Easy way to control access for large sections of your site
